# gnap

./: Cargo.toml
gnap-client/: README.md  package.json  tsconfig.json
gnap-client/src/: client.ts  index.ts
gnap-client/src/crypto/: hash.ts  httpsig.ts  index.ts  jwk.ts
gnap-client/src/demo/: run.ts  server.ts  web.ts
gnap-client/src/types/: client.ts  error.ts  grant.ts  index.ts  interaction.ts  key.ts  resource.ts  rs.ts  subject.ts  token.ts
gnap-client/src/validation/: grant-request.ts  grant-response.ts  index.ts
gnap-client/test/: fixtures.ts  rfc9635-section2.test.ts  rfc9635-section3-6.test.ts  rfc9635-section3.test.ts  rfc9635-section4.test.ts  rfc9635-section5.test.ts  rfc9635-section6.test.ts  rfc9635-section7.test.ts
gnap-compliance/: Cargo.toml  README.md
gnap-compliance/src/: lib.rs
gnap-compliance/src/crypto/: hash.rs  httpsig.rs  jwk.rs  mod.rs
gnap-compliance/src/fixtures/: mod.rs
gnap-compliance/src/types/: client.rs  error.rs  grant.rs  interaction.rs  key.rs  mod.rs  resource.rs  subject.rs  token.rs
gnap-compliance/src/validation/: grant_request.rs  grant_response.rs  helpers.rs  mod.rs
gnap-compliance/tests/: rfc9635_section2.rs  rfc9635_section3.rs  rfc9635_section3_6.rs  rfc9635_section4.rs  rfc9635_section5.rs  rfc9635_section6.rs  rfc9635_section7.rs
gnap-compliance/tests/common/: mod.rs
